--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.5.6",
+    "firebase": "^5.5.8",
+    "history": "^4.7.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-redux-firebase": "^2.1.9",
-    "react-scripts": "2.0.5"
+    "react-google-button": "^0.5.3",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.5",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
+    "redux-auth-wrapper": "^2.0.3",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
